[package]
name = "egui_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
use_eframe = ["eframe"]
use_sdl2 = ["sdl2"]

[dependencies]
egui = { version = "0.17.0", features = [ "convert_bytemuck"] }
epi = "0.17.0"
emath = "0.17.0"
epaint = "0.17.0"
num_enum = "0.5.7"
gl = "0.14"
ahash = "0.7"
bytemuck = "1.7"
bitflags = "1.3.2"
queues = "1.0.2"
eframe = { version = "0.17.0", optional = true }
sdl2 = { version = "0.35.2", features = [ "gfx" ], optional = true }


[dev-dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
